--- a/tests/Card.scss
+++ b/tests/Card.scss
@@ -13,6 +13,9 @@
   font-family: 'Nunito Sans', sans-serif;
   text-align: left;
 
+  transition: background 0.2s ease-in-out, box-shadow 0.1s ease-in-out,
+    border-color 0.2s ease-in-out;
+
   .Card__Section {
     padding: 24px;
     border: solid #dfe0e1;
