--- a/tests/kitchensink.scss
+++ b/tests/kitchensink.scss
@@ -61,7 +61,9 @@
   box-shadow: 10px 5px 5px red;
   outline: none;
 
-  font: 1.2em 'Fira Sans', sans-serif;
+  font:
+    1.2em 'Fira Sans',
+    sans-serif;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 600;
   font-style: italic;
